Update failure_explanation jupyter notebook

--- a/failure_explanation.ipynb
+++ b/failure_explanation.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IMAGENET_PATH = 'PATH_TO_THE_IMAGENET_DATASET'\n",
+    "IMAGENET_PATH = 'PATH_TO_THE_IMAGENET_DATASET (SHOULD_END_WITH_ILSVRC2021/)'\n",
     "\n",
     "class_index = 845 # index of the ImageNet class\n",
     "grouping = 'prediction' # can be either: label, prediction, (prediction is used in the paper)\n",
